# cutlass-puzzle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
blog/: 01_tiled_copy.cu  CMakeLists.txt  README.md
gemm-hard-way-challenge/: BLANKS.md  README.md  REMOTE_POD_GUIDE.md
gemm-hard-way-challenge/cuda/: 01_naive.cu  02_kernel_global_mem_coalesce.cu  03_kernel_shared_mem.cu  04_kernel_blocktiling_1d.cu  05_kernel_blocktiling_2d.cu  06_kernel_vectorize.cu  07_kernel_warptiling.cu  08_kernel_warptiling_all_dtypes.cu  09_kernel_tensorcore_naive.cu  10_kernel_tensorcore_warptiled.cu  11_kernel_tensorcore_double_buffered.cu  12_kernel_tensorcore_async.cu  13_kernel_cutlass.cu  14_kernel_cutlass_autotunable.cu  15_kernel_cutlass_hopper.cu  16_kernel_cutlass_hopper_autotunable.cu  17_kernel_hopper_tma_wgmma.cu  18_kernel_fastcu_matmul2_manual_tma_wgmma.cu  19_kernel_hopper_fastcu_big_tile.cu  20_kernel_hopper_fastcu_persistent.cu  21_kernel_hopper_fastcu_cluster.cu  22_kernel_fastcu_handwritten_tma_wgmma.cu  23_kernel_fastcu_cached_tma_maps.cu  24_kernel_fastcu_final.cu  25_kernel_fastcu_tma_store.cu  26_kernel_fastcu_hilbert_final.cu  challenge_todo.cuh  gemm_kernels.cuh  utils.cuh
gemm-hard-way-challenge/python/: benchmark_gemm_challenge.py  benchmark_one_day.py
gemm-hard-way-challenge/scripts/: run_remote_day.sh  run_remote_matrix.sh  upload_run_one_day.sh  upload_to_pod.sh
gemm-hard-way-challenge/solutions/: LICENSE.fastcu
gemm-hard-way-challenge/solutions/cuda/: 01_naive.cu  02_kernel_global_mem_coalesce.cu  03_kernel_shared_mem.cu  04_kernel_blocktiling_1d.cu  05_kernel_blocktiling_2d.cu  06_kernel_vectorize.cu  07_kernel_warptiling.cu  08_kernel_warptiling_all_dtypes.cu  09_kernel_tensorcore_naive.cu  10_kernel_tensorcore_warptiled.cu  11_kernel_tensorcore_double_buffered.cu  12_kernel_tensorcore_async.cu  13_kernel_cutlass.cu  14_kernel_cutlass_autotunable.cu  18_kernel_fastcu_matmul2_manual_tma_wgmma.cu  19_kernel_hopper_fastcu_big_tile.cu  20_kernel_hopper_fastcu_persistent.cu  21_kernel_hopper_fastcu_cluster.cu  22_kernel_fastcu_handwritten_tma_wgmma.cu  23_kernel_fastcu_cached_tma_maps.cu  24_kernel_fastcu_final.cu  25_kernel_fastcu_tma_store.cu  26_kernel_fastcu_hilbert_final.cu  gemm_kernels.cuh
gemm-hard-way-challenge/solutions/python/: benchmark_solution.py  solution_extension_loader.py
puzzle/: CMakeLists.txt  README.md  requirements-dsl.txt
puzzle/day01_layouts_and_tiled_copy/: README.md  puzzle.cu
puzzle/day02_sm80_pipelined_sgemm/: README.md  puzzle.cu
puzzle/day03_hopper_wgmma/: README.md  puzzle.cu
puzzle/day04_hopper_wgmma_tma/: README.md  puzzle.cu
puzzle/day05_blackwell_tcgen05/: README.md  puzzle.cu
puzzle/day06_blackwell_tma_load/: README.md  puzzle.cu
puzzle/day07_blackwell_tma_multicast/: README.md  puzzle.cu
puzzle/day08_blackwell_2sm_mma/: README.md  puzzle.cu
puzzle/day09_blackwell_tma_epilogue/: README.md  puzzle.cu
puzzle/day10_cute_dsl_hello_world/: README.md  day10.ipynb  puzzle.py  solution.py
puzzle/day11_cute_dsl_layouts/: README.md  day11.ipynb  puzzle.py  solution.py
puzzle/day12_cute_dsl_elementwise/: README.md  day12.ipynb  puzzle.py  solution.py
puzzle/day13_cute_dsl_tv_layout_predicated/: README.md  day13.ipynb  puzzle.py  solution.py
puzzle/day14_cute_dsl_simt_gemm/: README.md  day14.ipynb  puzzle.py  solution.py
